[package]
name = "simple_snake_game"
version = "0.1.0"
edition = "2021"
description = "A simple Snake game implemented in Rust and WebAssembly"
repository = "https://github.com/kenkomu/snake_lib"  # Replace with your repository URL
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Document", "Element", "HtmlElement", "Window", "console",
  "CssStyleDeclaration", "HtmlDivElement", "KeyboardEvent"
]


# Exclude unnecessary files from the crate
exclude = [
    "/pkg/*",
    "/target/*",
    "*.rs.bk",
    "*.log",
    "*.wasm",
    "node_modules",
    ".DS_Store",
    "*~",
]